# huffman

./: .gitignore  CMakeLists.txt  readme.md
include/: BinaryTree.h  Decoder.h  Huffman.h  TreeBuilder.h
tests/: BinaryTree.cpp  TreeBuilder.cpp
tests/unit/huffman/: test_build_huffman_tree.cpp  test_create_frequency_table.cpp  test_create_min_pq.cpp  test_encoding.cpp
tests/unit/node/: test_node.cpp
